Migrate workflow to Ubuntu 24.04 and update dependencies
Updated the workflow to use Ubuntu 24.04 and adjusted dependencies accordingly. Enhanced build steps and APK upload process.

--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # CAMBIO CLAVE: usar latest en lugar de 20.04
+    runs-on: ubuntu-latest  # Ahora es Ubuntu 24.04
     timeout-minutes: 45
     
     steps:
@@ -35,27 +35,30 @@ jobs:
           ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
           ${{ runner.os }}-buildozer-
     
-    - name: Install system dependencies
+    - name: Install system dependencies (CORREGIDO para Ubuntu 24.04)
       run: |
         sudo apt update
         sudo apt install -y \
           git \
           zip \
           unzip \
-          openjdk-17-jdk \  # CAMBIO: Ubuntu 22.04+ usa Java 17 por defecto
+          openjdk-17-jdk \
           python3-pip \
           python3-dev \
+          python3-venv \
           autoconf \
           libtool \
           pkg-config \
           zlib1g-dev \
-          libncurses5-dev \
-          libncursesw5-dev \
+          libncurses-dev \        # CAMBIO: libncurses5-dev -> libncurses-dev
+          libncursesw5-dev \       # Este sí existe
           cmake \
           libffi-dev \
           libssl-dev \
           wget \
-          curl
+          curl \
+          software-properties-common \
+          build-essential          # Añadido para herramientas de compilación
     
     - name: Install Android SDK
       run: |
@@ -64,50 +67,83 @@ jobs:
           mkdir -p ~/.buildozer/android/platform
           cd ~/.buildozer/android/platform
           
-          # Usar la última versión de command line tools
+          # Descargar Android SDK command line tools (última versión)
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip -q commandlinetools-linux-11076708_latest.zip
           mkdir -p android-sdk/cmdline-tools
           mv cmdline-tools android-sdk/cmdline-tools/latest
           
+          # Configurar variables de entorno para este paso
+          export ANDROID_HOME=~/.buildozer/android/platform/android-sdk
+          export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
+          
           # Aceptar licencias
-          yes | ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
           
           # Instalar componentes
-          ~/.buildozer/android/platform/android-sdk/cmdline-tools/latest/bin/sdkmanager \
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
             "platform-tools" \
-            "platforms;android-33" \  # Actualizado a API 33
-            "build-tools;33.0.2"      # Build tools actualizadas
+            "platforms;android-33" \
+            "build-tools;33.0.2" \
+            --verbose
         else
           echo "✅ Android SDK cacheado"
         fi
     
-    - name: Install buildozer
+    - name: Install buildozer and Cython
       run: |
-        pip install --upgrade pip
-        pip install buildozer cython==0.29.36
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --user buildozer cython==0.29.36
+        
+        # Verificar instalación
+        echo "✅ Versiones instaladas:"
+        python3 --version
+        ~/.local/bin/buildozer --version || echo "buildozer instalado en ~/.local/bin"
+        
+        # Añadir ~/.local/bin al PATH
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
     
     - name: Configure buildozer.spec
       run: |
         if [ ! -f buildozer.spec ]; then
-          buildozer init
+          echo "📝 Creando buildozer.spec..."
+          ~/.local/bin/buildozer init
+          
+          # Configurar para tu app
           sed -i 's/title = My Application/title = Calculadora Educativa/' buildozer.spec
           sed -i 's/package.name = myapp/package.name = calculadora/' buildozer.spec
           sed -i 's/package.domain = org.test/package.domain = palmace.github.io/' buildozer.spec
+          sed -i 's/source.include_exts = py,png,jpg,kv,atlas/source.include_exts = py,png,jpg,kv/' buildozer.spec
           sed -i 's/requirements = python3,kivy/requirements = python3,kivy==2.3.1,cython==0.29.36/' buildozer.spec
           
-          # Configurar para SDK/NDK actualizados
+          # Configuraciones específicas para Ubuntu 24.04
+          echo "" >> buildozer.spec
+          echo "# Optimizaciones para Ubuntu 24.04" >> buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
           echo "android.sdk = 33" >> buildozer.spec
           echo "android.ndk = 25b" >> buildozer.spec
           echo "android.ndk_path = ~/.buildozer/android/platform/android-ndk-r25b" >> buildozer.spec
+          echo "android.ant_path = ~/.buildozer/android/platform/apache-ant-1.9.4" >> buildozer.spec
+        else
+          echo "✅ buildozer.spec ya existe"
+          cat buildozer.spec | grep -E "title|package.name|requirements"
         fi
     
     - name: Build APK
-      run: buildozer -v android debug
+      run: |
+        echo "🏗️ Iniciando compilación del APK (puede tomar 20-30 minutos)..."
+        ~/.local/bin/buildozer -v android debug
     
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: Calculadora-APK
+        name: Calculadora-APK-${{ github.sha }}
         path: ./bin/*.apk
+        retention-days: 30
+        if-no-files-found: error
+    
+    - name: Display APK info
+      if: success()
+      run: |
+        echo "✅ APK generado exitosamente:"
+        ls -la ./bin/*.apk || echo "No se encontró APK"
