--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -11,7 +11,7 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Ahora es Ubuntu 24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 45
     
     steps:
@@ -35,9 +35,10 @@ jobs:
           ${{ runner.os }}-buildozer-${{ hashFiles('buildozer.spec') }}
           ${{ runner.os }}-buildozer-
     
-    - name: Install system dependencies (CORREGIDO para Ubuntu 24.04)
+    - name: Install system dependencies
       run: |
         sudo apt update
+        # Instalar paquetes UNO POR LÍNEA para evitar errores de formato
         sudo apt install -y \
           git \
           zip \
@@ -50,15 +51,16 @@ jobs:
           libtool \
           pkg-config \
           zlib1g-dev \
-          libncurses-dev \        # CAMBIO: libncurses5-dev -> libncurses-dev
-          libncursesw5-dev \       # Este sí existe
+          libncurses-dev \
+          libncursesw5-dev \
           cmake \
           libffi-dev \
           libssl-dev \
           wget \
           curl \
           software-properties-common \
-          build-essential          # Añadido para herramientas de compilación
+          build-essential
+        # IMPORTANTE: No dejar espacios después de las diagonales invertidas
     
     - name: Install Android SDK
       run: |
@@ -67,13 +69,15 @@ jobs:
           mkdir -p ~/.buildozer/android/platform
           cd ~/.buildozer/android/platform
           
-          # Descargar Android SDK command line tools (última versión)
+          # Descargar Android SDK command line tools
           wget -q https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
           unzip -q commandlinetools-linux-11076708_latest.zip
+          rm commandlinetools-linux-11076708_latest.zip
+          
           mkdir -p android-sdk/cmdline-tools
           mv cmdline-tools android-sdk/cmdline-tools/latest
           
-          # Configurar variables de entorno para este paso
+          # Configurar variables de entorno
           export ANDROID_HOME=~/.buildozer/android/platform/android-sdk
           export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools
           
@@ -84,13 +88,12 @@ jobs:
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager \
             "platform-tools" \
             "platforms;android-33" \
-            "build-tools;33.0.2" \
-            --verbose
+            "build-tools;33.0.2"
         else
-          echo "✅ Android SDK cacheado"
+          echo "✅ Android SDK ya está cacheado"
         fi
     
-    - name: Install buildozer and Cython
+    - name: Install buildozer and dependencies
       run: |
         python3 -m pip install --upgrade pip
         python3 -m pip install --user buildozer cython==0.29.36
@@ -98,7 +101,7 @@ jobs:
         # Verificar instalación
         echo "✅ Versiones instaladas:"
         python3 --version
-        ~/.local/bin/buildozer --version || echo "buildozer instalado en ~/.local/bin"
+        pip3 --version
         
         # Añadir ~/.local/bin al PATH
         echo "$HOME/.local/bin" >> $GITHUB_PATH
@@ -116,22 +119,33 @@ jobs:
           sed -i 's/source.include_exts = py,png,jpg,kv,atlas/source.include_exts = py,png,jpg,kv/' buildozer.spec
           sed -i 's/requirements = python3,kivy/requirements = python3,kivy==2.3.1,cython==0.29.36/' buildozer.spec
           
-          # Configuraciones específicas para Ubuntu 24.04
-          echo "" >> buildozer.spec
-          echo "# Optimizaciones para Ubuntu 24.04" >> buildozer.spec
-          echo "android.accept_sdk_license = True" >> buildozer.spec
-          echo "android.sdk = 33" >> buildozer.spec
-          echo "android.ndk = 25b" >> buildozer.spec
-          echo "android.ndk_path = ~/.buildozer/android/platform/android-ndk-r25b" >> buildozer.spec
-          echo "android.ant_path = ~/.buildozer/android/platform/apache-ant-1.9.4" >> buildozer.spec
+          # Configuraciones adicionales
+          cat >> buildozer.spec << 'EOF'
+
+# Android specific configuration
+android.accept_sdk_license = True
+android.sdk = 33
+android.ndk = 25b
+android.ndk_path = ~/.buildozer/android/platform/android-ndk-r25b
+android.ant_path = ~/.buildozer/android/platform/apache-ant-1.9.4
+android.gradle_dependencies = 'com.google.android.material:material:1.9.0'
+EOF
         else
           echo "✅ buildozer.spec ya existe"
-          cat buildozer.spec | grep -E "title|package.name|requirements"
+          echo "📋 Contenido relevante:"
+          grep -E "title|package\.name|requirements|android\.sdk|android\.ndk" buildozer.spec || true
         fi
     
     - name: Build APK
       run: |
-        echo "🏗️ Iniciando compilación del APK (puede tomar 20-30 minutos)..."
+        echo "🏗️ Iniciando compilación del APK..."
+        echo "⏱️ Este proceso puede tomar 20-30 minutos..."
+        
+        # Mostrar información de debug
+        echo "📁 Estructura de Android:"
+        ls -la ~/.buildozer/android/platform/ || true
+        
+        # Compilar
         ~/.local/bin/buildozer -v android debug
     
     - name: Upload APK
@@ -140,10 +154,17 @@ jobs:
         name: Calculadora-APK-${{ github.sha }}
         path: ./bin/*.apk
         retention-days: 30
-        if-no-files-found: error
+        if-no-files-found: warn  # Cambiado a 'warn' para no fallar si no hay APK
     
     - name: Display APK info
       if: success()
       run: |
-        echo "✅ APK generado exitosamente:"
-        ls -la ./bin/*.apk || echo "No se encontró APK"
+        if ls ./bin/*.apk 1> /dev/null 2>&1; then
+          echo "✅ APK generado exitosamente:"
+          ls -la ./bin/*.apk
+          echo "📏 Tamaño: $(du -h ./bin/*.apk | cut -f1)"
+        else
+          echo "❌ No se encontró APK en ./bin/"
+          echo "📁 Contenido de ./bin:"
+          ls -la ./bin/ || echo "Directorio ./bin no existe"
+        fi
