--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -109,9 +109,9 @@ jobs:
           sed -i 's/source.include_exts = py,png,jpg,kv,atlas/source.include_exts = py,png,jpg,kv/' buildozer.spec
           sed -i 's/requirements = python3,kivy/requirements = python3,kivy==2.3.1,cython==0.29.36/' buildozer.spec
           
-          # Configuraciones adicionales - CORREGIDO: buildozer.spec (no builder0z.spec)
+          # Configuraciones adicionales - CON INDENTACIÓN CORRECTA
           cat >> buildozer.spec << 'EOF'
-
+          
 # Android specific configuration
 android.accept_sdk_license = True
 android.sdk = 33
