--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -34,7 +34,6 @@ jobs:
     - name: Install buildozer and cython
       run: |
         python3 -m pip install --upgrade pip
-        # Cython 0.29.33 es la más estable para evitar el error de compilación actual
         python3 -m pip install --user buildozer "cython<3.0"
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
@@ -44,32 +43,34 @@ jobs:
           buildozer init
         fi
         
-        # Forzamos la configuración correcta ignorando lo que haya en el archivo
+        # Configuraciones de identidad de la app
         sed -i 's/^title = .*/title = Calculadora Educativa/' buildozer.spec
         sed -i 's/^package.name = .*/package.name = calculadoramath/' buildozer.spec
         sed -i 's/^package.domain = .*/package.domain = org.palmace/' buildozer.spec
-        sed -i 's/^source.include_exts = .*/source.include_exts = py,png,jpg,kv/' buildozer.spec
         
-        # CAMBIO CRÍTICO: Usar Kivy 2.3.0 para evitar el error del log
+        # Requerimientos estables
         sed -i 's/^requirements = .*/requirements = python3,kivy==2.3.0/' buildozer.spec
         
-        # Configuración de Android recomendada para GitHub Actions
+        # SOLUCIÓN AL ERROR DE LICENCIAS Y AIDL:
+        # Forzamos una versión estable de Build Tools y API
         sed -i 's/#android.accept_sdk_license = False/android.accept_sdk_license = True/' buildozer.spec
         sed -i 's/^android.api = .*/android.api = 33/' buildozer.spec
         sed -i 's/^android.minapi = .*/android.minapi = 21/' buildozer.spec
-        sed -i 's/#android.ndk = 25b/android.ndk = 25b/' buildozer.spec
         
-        # Eliminar rutas manuales que causan el "Broken pipe"
-        sed -i '/android.ndk_path =/d' buildozer.spec
-        sed -i '/android.sdk_path =/d' buildozer.spec
+        # Añadimos explícitamente la versión de build_tools para evitar la 37.0.0-rc1
+        if grep -q "android.build_tools_version =" buildozer.spec; then
+          sed -i 's/^android.build_tools_version = .*/android.build_tools_version = 33.0.2/' buildozer.spec
+        else
+          sed -i '/^android.api = /a android.build_tools_version = 33.0.2' buildozer.spec
+        fi
 
     - name: Build APK
       run: |
-        # Limpiamos posibles residuos de compilaciones fallidas anteriores
-        rm -rf .buildozer/android/platform/build-*
+        # [span_1](start_span)[span_2](start_span)Aceptar licencias manualmente antes de empezar para asegurar que AIDL se instale[span_1](end_span)[span_2](end_span)
+        mkdir -p ~/.android && touch ~/.android/repositories.cfg
         
-        echo "🏗️ Iniciando compilación (esto puede tardar)..."
-        # [span_4](start_span)Usamos log_level = 2 para ver el error real si vuelve a fallar[span_4](end_span)
+        echo "🏗️ Iniciando compilación..."
+        # El comando buildozer se encarga de descargar el SDK estable definido arriba
         buildozer -v android debug
     
     - name: Upload APK
